<resources>
    <string name="app_name">Diet Tracker App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Diet Tracker App</string>
    <string name="nav_header_subtitle">Simple Diet Tracker Application</string>
    <string name="nav_header_desc">Diet Tracker App</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Beranda</string>
    <string name="menu_diet_program">Program Diet</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_landing">LandingActivity</string>
    
    <string name="tinggi_badan">Tinggi Badan(cm)</string>
    <string name="berat_badan">Berat Badan(kg)</string>
    <string name="usia">Usia</string>
    <string name="start_use_app">MULAI GUNAKAN APLIKASI</string>
    <string name="hint_height">160</string>
    <string name="hint_weight">65</string>
    <string name="hint_age">25</string>

    <string name="landing_welcome">SELAMAT DATANG</string>
    <string name="sub_landing_welcome">Masukkan tinggi badan, berat badan, dan usia untuk memulai penggunaan aplikasi</string>
    <string name="input_height">Input Height</string>
    <string name="masukkan_tinggi_badan">Masukkan Tinggi Badan</string>
    <string name="masukkan_berat_badan">Masukkan Berat Badan</string>
    <string name="masukkan_usia">Masukkan Usia</string>
    <string name="ubah_data">UBAH DATA</string>
</resources>