<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.diettrackerapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_addDataFragment"
            app:destination="@id/addDataFragment" />
    </fragment>
    <fragment
        android:id="@+id/addDataFragment"
        android:name="com.example.diettrackerapp.ui.home.AddDataFragment"
        android:label="Tambah Data Kalori"
        tools:layout="@layout/fragment_add_data" >
        <action
            android:id="@+id/action_addDataFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_diet_program"
        android:name="com.example.diettrackerapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_diet_program"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.diettrackerapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />
</navigation>